--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
       name="description"
       content="Sitio Web de Limpieza de tapizados en Chaco / Corrientes"
     />
+    <link rel="stylesheet" href="/css/video-react.css" />
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+  crossorigin="anonymous"
+/>
     <link rel='icon' href="assets/Logo-blanco.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
